# PMSD

./: .gitignore  README.md
opencv/: CMakeLists.txt  lines.cpp  main.cpp
proto/: README.md  pubspec.yaml
proto/android/app/: build.gradle
proto/lib/: date_picker.dart  db_helper.dart  edge_painter.dart  height_weight_confirmation.dart  image_picker.dart  image_preview.dart  line_fitting.dart  main.dart  pose_detector.dart  text_input_measurement.dart
proto/lib/charts/: chart.dart  chart_data.dart  chart_sd_curves.dart  chart_utils.dart  charts.dart  fullscreen_chart.dart  fullscreen_length_for_age.dart  fullscreen_weight_for_age.dart  length_for_age.dart  weight_for_age.dart  weight_for_age_data.dart
proto/lib/imaging/: image_loader.dart  image_picker.dart  image_preview.dart
proto/lib/magnifier/: edge_painter.dart  image_preview.dart  magnifier.dart  magnifier_painter.dart  touch_bubble.dart
proto/lib/measurement/: image_picker.dart  measurement_data.dart
proto/lib/models/: child.dart  measurement.dart  parent.dart
proto/lib/views/: add_parent.dart  add_patient.dart  children_for_parent.dart  parents.dart  search_parents.dart
proto/opencv/: .gitignore  README.md  pubspec.yaml
proto/opencv/android/: CMakeLists.txt  build.gradle
proto/opencv/android/src/main/: AndroidManifest.xml
proto/opencv/android/src/main/kotlin/com/example/opencv/: OpencvPlugin.kt
proto/opencv/example/: pubspec.yaml
proto/opencv/ios/: opencv.podspec
tflite/pose_estimation/: pose_estimation.py  utils.py
tflite/segmentation/: segmentation.py  utils.py
(+11 files in other folders)
